# Recruiter-Copilot

./: README.md
recruiter-copilot/: pyproject.toml
recruiter-copilot/backend/: alliance_matrix.json  main.py  resume_parser.py  resume_processor.py
recruiter-copilot/frontend/: index.html  package-lock.json  package.json
recruiter-copilot/frontend/src/: App.css  App.tsx  VacancyDetails.tsx  index.css  main.tsx
