[project]
name = "recruiter-copilot"
version = "0.1.0"
description = "Recruiter Copilot"
authors = [
    {name = "Maria Bondareva"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
